<resources>
    <string name="app_name">THEIA</string>
    <string name="menuTitle">Setup</string>
    <string name="phone">Phone Number</string>
    <string name="nameString">Name</string>
    <string name="relationString">Relation</string>
    <string name="spinnerCare">Caretaker, Emergency Contact</string>
    <string name="addContact">Add Contact</string>
    <string name="addTitle" translatable="false">Add Contact</string>
    <string name="contactString">Contacts</string>
    <string name="roleString">Role</string>
    <string name="title_activity_settings">Settings</string>
    <string name="camera_view">Visual Assistance</string>
    <string name="gpsString">GPS Tracking</string>
    <string name="compassString">Compass Guidance</string>
    <string name="suggestString">Suggest Destination</string>
    <string name="fallString">Fall Detection</string>
    <string name="micButton">Speak Command</string>
    <string name="search_hint">Search Classroom</string>
    <string name="closest">NEAREST</string>
    <string name="preferred">FAVORITES</string>
    <string name="contacts">CONTACTS</string>


    <!-- Strings related to Settings -->

    <string name="camera">CAMERA</string>
    <string name="gps">GPS</string>
    <string name="compass">COMPASS</string>
    <string name="fall">DETECT FALL</string>
    <string name="volume">VOLUME</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_gps_summary">Activates GPS tracking to ensure location of user is always known</string>
    <string name="pref_camera_view_summary">Enables Visual aid through the camera (Reduces Battery Performance)</string>
    <string name="pref_compass_summary">Enables use of compass to navigate more accurately</string>
    <string name="pref_suggestion_summary">Enables smart suggestions based on user\'s usual schedule</string>
    <string name="pref_fall_summary">Enables fall detection through the use of accelerometers</string>

    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_default_display_name0">Ray Charles</string>
    <string name="pref_default_display_name1">Jane Doe</string>

    <string name="pref_volume">Command Volume</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="activity_add_contacts">Add Contact</string>
    <string name="Caretaker">Caretaker</string>

    <string name="pref_default_phone_number">214-654-3210</string>
    <string name="pref_default_phone_number0">469-456-8901</string>
    <string name="pref_default_phone_number1">972-987-6543</string>
    <string name="pref_send_location_summary">Send current location to this contact if emergency mode is activated</string>
    <string name="send_location_string">Send Location (Emergency Mode)</string>
    <string name="addressString">Address</string>
    <string name="pref_address">800 W Campbell Rd. \nRichardson, TX. 75080</string>


    <string-array name="pref_volume_entries">
        <item>Loudest</item>
        <item>Loud</item>
        <item>Normal</item>
        <item>Soft</item>
        <item>Softest</item>
    </string-array>
    <string-array name="pref_volume_values">
        <item>100</item>
        <item>80</item>
        <item>60</item>
        <item>40</item>
        <item>20</item>
    </string-array>

    <string-array name="list_entries">
        <item>ECSS 2.201</item>
        <item>ECSS 2.202</item>
        <item>ECSS 2.203</item>
        <item>ECSS 2.204</item>
        <item>ECSS 2.205</item>
        <item>ECSS 2.206</item>
        <item>ECSS 2.207</item>
        <item>ECSS 2.208</item>
        <item>ECSS 2.209</item>
        <item>ECSS 2.210</item>
        <item>ECSS 2.211</item>
        <item>ECSS 2.212</item>
        <item>ECSS 2.213</item>
        <item>ECSS 2.214</item>
        <item>ECSS 2.215</item>
        <item>ECSS 2.216</item>
        <item>ECSS 2.217</item>
        <item>ECSS 2.218</item>
        <item>ECSS 2.219</item>
        <item>ECSS 2.220</item>
        <item>ECSS 2.221</item>
        <item>ECSS 2.222</item>
        <item>ECSS 2.223</item>

    </string-array>
    <string-array name="list_values">
        <item>100</item>
        <item>80</item>
        <item>60</item>
        <item>40</item>
        <item>20</item>
    </string-array>

</resources>
