<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name1"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/nameString" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_phone_number1"
        android:inputType="textCapWords"
        android:key="example_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/phone" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="send_location_switch"
        android:summary="@string/pref_send_location_summary"
        android:title="@string/send_location_string" />
</PreferenceScreen>
