<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name0"
        android:inputType="textCapWords"
        android:key="example_text0"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/nameString" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_phone_number0"
        android:inputType="textCapWords"
        android:key="example_number0"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/phone" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_address"
        android:inputType="textCapWords"
        android:key="example_address"
        android:maxLines="3"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/addressString" />


</PreferenceScreen>
