<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:checked="true"
            android:switchMinWidth="80dp"
            android:text="@string/gps"
            android:textColor="@color/colorAccent2"
            android:textSize="60sp"
            tools:checked="true" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:checked="true"
            android:switchMinWidth="80dp"
            android:text="@string/camera"
            android:textColor="@color/colorAccent2"
            android:textSize="60sp"
            tools:checked="true" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:checked="true"
            android:switchMinWidth="80dp"
            android:text="@string/compass"
            android:textColor="@color/colorAccent2"
            android:textSize="60sp"
            tools:checked="true" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:checked="true"
            android:switchMinWidth="80dp"
            android:text="@string/fall"
            android:textColor="@color/colorAccent2"
            android:textSize="52sp"
            tools:checked="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/volume"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent2"
                android:textSize="50sp"/>

            <SeekBar
                style="@android:style/Widget.SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:progress="@android:integer/status_bar_notification_info_maxnum" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>